# rmcast

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
extension/: application.qrc  menu-icon.qmldiff  vncast.pro  vncast.xovi
extension/qml/: ArkChoiceRow.qml  SegmentRow.qml  VnChoiceRow.qml  config.qml  main.qml  session.qml
extension/src/: epdc_hook.cpp  epdc_hook.h  launcher.cpp  launcher.h  main.cpp  settings.cpp  settings.h
extension/src/qtfb/: common.h  fbmanagement.cpp  fbmanagement.h  frame_view.cpp  frame_view.h  protocol.h  server.cpp  server.h
manifests/vnsee-0/: external.manifest.json
manifests/vnsee-1/: external.manifest.json
manifests/vnsee-2/: external.manifest.json
manifests/vnsee-3/: external.manifest.json
middleware/: .gitignore  PROTOCOL.md  README.md
middleware/docs/: architecture.md
middleware/extension/: menu-icon.qmldiff  vncast.xovi
middleware/extension/qml/: FilledButton.qml  OutlineButton.qml  VnButton.qml  config.qml  launcher.qml  session.qml
middleware/extension/src/: detect.cpp  detect.h  epdc_hook.cpp  epdc_hook.h  launcher.cpp  main.cpp  settings.cpp  settings.h
middleware/extension/src/qtfb/: FBController.cpp  FBController.h  frame_view.cpp  frame_view.h  log.h  protocol.h  server.cpp  server.h
middleware/installer/: README.md  bundle.sh  install.sh  uninstall.sh
middleware/scripts/: build-qmd.sh  compare-xovi-meta.sh  disasm-broker.sh  dump-epframebuffer.sh  extract-live-qmd.sh  find-epdc-symbols.sh  find-imports.sh  find-sendupdate.sh  probe-broker.sh  rmpp-swipe-uinput.py  rmpp-tap-uinput.py  tap-and-shot.sh  tap.py  test-hash-roundtrip.sh  trigger-screenshot.sh  unhash-and-show.sh  unhash-live-qmd.sh  unhash-qmd.sh
patches/: 0001-libvncclient-rcastmono1-encoding.patch
scripts/: build-appload.sh  build-extension.sh  build-ferrari-userhome.sh  build-vnsee-ferrari.sh  check-hash.sh  deploy-rmpp.sh  deploy.sh  diagnose-stale-hash.sh  dump-all-syms.sh  dump-ark-qml.sh  extract-qmd.sh  find-mangled.sh  probe-epdc.sh  qtfb-test-client.py  unhash-appload-qmd.sh  verify-qmd-resolvable.sh
src/: main.cpp  orientation.hpp  orientation_sensor.cpp  orientation_sensor.hpp
src/app/: client.cpp  client.hpp  screen.cpp  screen.hpp
src/rmioc/: screen.cpp  screen.hpp  vncast_client.cpp  vncast_client.hpp
